--- a/src/encuestadores/hnk-encuestador-pwd.html
+++ b/src/encuestadores/hnk-encuestador-pwd.html
@@ -80,6 +80,7 @@
             },
             _onSubmit: function(e) {
                 e.stopPropagation();
+                e.preventDefaut();
             },
             enviar: function() {
                 if (this.$.form.validate()) {
