--- a/src/encuestadores/hnk-encuestador.html
+++ b/src/encuestadores/hnk-encuestador.html
@@ -87,6 +87,7 @@
             },
             _onSubmit: function(e) {
                 e.stopPropagation();
+                e.preventDefaut();
             },
             _onTapPwd: function() {
                 this.fire('pwd');
