--- a/src/ui/hnk-imagen.html
+++ b/src/ui/hnk-imagen.html
@@ -64,7 +64,7 @@
                 ></iron-image>
             </template>
             <template is="dom-if" if="[[_mostrarBoton(editable,mostrarBoton)]]">
-                <paper-icon-button icon="image:add-a-photo"></paper-icon-button>
+                <paper-icon-button icon="image:photo-camera"></paper-icon-button>
             </template>
             <paper-input
                 id="input"
