--- a/src/util/form-styles.html
+++ b/src/util/form-styles.html
@@ -7,6 +7,7 @@
     <style include="shared-styles">
         fieldset {
             margin-left: 20%;
+            margin-right: 10%;
             border: none 0px;
             padding: 0;
         }
