--- a/src/util/shared-styles.html
+++ b/src/util/shared-styles.html
@@ -15,6 +15,7 @@
             --primary-background-color: red;
             --secondary-text-color: black;
             --disabled-text-color2: white;
+            --titulo-color: #fc9f53;
 
             --size-icono: 64px;
 
