--- a/src/util/shared-styles.html
+++ b/src/util/shared-styles.html
@@ -12,7 +12,7 @@
         :host {
             --primary-color: #1b6d37;
             --primary-text-color: white;
-            --primary-background-color: red;
+            --primary-background-color: white;
             --secondary-text-color: black;
             --disabled-text-color2: white;
             --titulo-color: #fc9f53;
