--- a/src/pages/hnk-encuestador-page.html
+++ b/src/pages/hnk-encuestador-page.html
@@ -74,6 +74,7 @@
             <hnk-encuestador-pwd
                 id="pwd"
                 name="pwd"
+                encuestador="[[encuestador]]"
                 antigua="{{pwd.a}}"
                 nueva="{{pwd.n}}"
                 repetir="{{pwd.r}}"
