--- a/src/encuestadores/hnk-encuestador.html
+++ b/src/encuestadores/hnk-encuestador.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../paper-input/paper-input.html">
 <link rel="import" href="../gold-email-input/gold-email-input.html">
 
-<link rel="import" href="../ui/hnk-imagen.html">
+<link rel="import" href="hnk-encuestador-foto.html">
 
 <link rel="import" href="../util/hnk-base.html">
 <link rel="import" href="../util/hnk-spinner.html">
@@ -18,22 +18,13 @@
             :host {
                 display: block;
             }
-            hnk-imagen {
-                --hnk-image-size: 192px;
-                text-align: center;
-                background-color: var(--google-grey-300);
-                --hnk-image-color: var(--google-grey-500);
-                padding: 0;
-            }
         </style>
 
         <form is="iron-form" id="form" class="form" on-iron-form-submit="_onSubmit">
-            <hnk-imagen
-                imagen="{{encuestador.foto}}"
-                imagen-defecto="social:person"
+            <hnk-encuestador-foto
+                foto="{{encuestador.foto}}"
                 editable
-                mostrar-boton
-            ></hnk-imagen>
+            ></hnk-encuestador-foto>
             <fieldset>
                 <paper-input label="Nick" readOnly value="[[encuestador.nick]]" required></paper-input>
                 <paper-input
