--- a/src/encuestadores/hnk-encuestador-pwd.html
+++ b/src/encuestadores/hnk-encuestador-pwd.html
@@ -20,6 +20,7 @@
         <form is="iron-form" id="form" class="form" on-iron-form-submit="_onSubmit">
             <hnk-encuestador-foto foto="[[encuestador.foto]]"></hnk-encuestador-foto>
             <fieldset>
+                <paper-input label="Nick" readOnly value="[[encuestador.nick]]" required></paper-input>
                 <paper-input
                     type="password"
                     name="antigua"
