--- a/src/util/custom-style.html
+++ b/src/util/custom-style.html
@@ -9,5 +9,6 @@
         _background-image: url(/images/heineken-mini3.png);
         _background-position: -8px -4px;
         margin: 0;
+        height: 100%;
     }
 </style>
