--- a/src/ui/hnk-imagen.html
+++ b/src/ui/hnk-imagen.html
@@ -21,7 +21,7 @@
 
             iron-image {
                 height: var(--hnk-image-size,--size-icono);
-                width: var(--hnk-image-size,--size-icono);
+                width: 100%;
             }
             iron-icon {
                 --iron-icon-height: var(--hnk-image-size,--size-icono);
@@ -33,6 +33,7 @@
             }
             paper-icon-button {
                 position: absolute;
+                left: 75%;
                 bottom: -24px;
                 padding: 12px;
                 width: 48px;
